Refine conclusion flow

--- a/magic/index.html
+++ b/magic/index.html
@@ -15,14 +15,8 @@
 
     <div class="container">
         <div class="instructions">
-            Randomly enter 5 different cards from a deck of 52 playing cards.
-            To enter a card, type the value followed by the suit.
-        </div>
-        <div class="instructions">
-            The values are: A 2 3 4 5 6 7 8 9 10 J Q K. The suits are: D C H S.
-        </div>
-        <div class="instructions">
-            Example: 4D KS 9C AH 10S
+            <p>Think of any 5 cards from a deck of 52 playing cards.</p>
+            <p>Example: 4D KS 9C AH 10S</p>
         </div>
     
         <form id="input" class="pure-form">
@@ -33,9 +27,12 @@
             <input type="text" placeholder="Enter fifth card" class="card-input" id="five">
             <button type="button" id="go" class="btn">Perform Magic</button>
         </form>
-        <div id="output"></div>
-        <button type="button" id="again" class="btn">Again</button>
-        <div class="counter">Times played: <span id="addendum">0</span></div>
+
+        <div id="conclusion">
+            <div id="output"></div>
+            <button type="button" id="again" class="btn">Again</button>
+            <div class="counter">Times played: <span id="addendum">0</span></div>
+        </div>
     </div>
 
 </body>
