--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="cube3 behind"> </div>
 
       <div id="aboutdiv" class="tab">
-        Hi! My name is Raymond Xu, and I study Computer Science at Columbia University. In my free time, I love building cool apps, learning new technologies, and practicing sleight of hand. This summer I'll be working at PayPal as a software engineering intern. Feel free to reach out to me!
+        Hi! My name is Raymond Xu, and I study Computer Science at Columbia University. I love building cool apps, learning new technologies, and practicing sleight of hand. This summer I'll be working at PayPal as a software engineering intern. Feel free to reach out!
       </div>
 
       <div id="projectsdiv" class="tab">
