Add links in about tab

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="cube3 behind"> </div>
 
       <div id="aboutdiv" class="tab">
-        Hi! My name is Raymond Xu, and I study Computer Science at Columbia University. I love building cool apps, learning new technologies, and practicing sleight of hand. This summer I'll be working at PayPal as a software engineering intern. Feel free to reach out!
+        Hi! My name is Raymond Xu, and I study Computer Science at <a href="http://www.columbia.edu">Columbia University</a>. I love building cool apps, learning new technologies, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu">Medium</a>. This summer I'll be working at <a href="https://www.paypal.com/home">PayPal</a> as a software engineer intern. Feel free to reach out!
       </div>
 
       <div id="projectsdiv" class="tab">
