--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       <div class="cube3 behind"> </div>
 
       <div id="aboutdiv" class="tab">
-        Hi! My name is Raymond Xu, and I study Computer Science at <a href="http://www.columbia.edu">Columbia University</a>. I love building cool apps, learning new technologies, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu">Medium</a>. This summer I'll be working at <a href="https://www.paypal.com/home">PayPal</a> as a software engineer intern. Feel free to reach out!
+        Hi! My name is Raymond Xu, and I'm a sophomore studying Computer Science at <a href="http://www.columbia.edu" target="_blank">Columbia University</a>. I love building cool apps, learning new technologies, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" target="_blank">Medium</a>. The past summer I worked at <a href="https://www.paypal.com/home" target="_blank">PayPal</a> as a Software Engineer Intern. Feel free to reach out!
       </div>
 
       <div id="projectsdiv" class="tab">
-        <a href="http://density.adicu.com"><div class="project">Density</div></a>
-        <a href="nytimes/index.html"><div class="project">NYTimes</div></a>
-        <a href="arrows/index.html"><div class="project">Arrows</div></a>
+        <a href="http://density.adicu.com" target="_blank"><div class="project">Density</div></a>
+        <a href="nytimes/index.html" target="_blank"><div class="project">NYTimes</div></a>
+        <a href="arrows/index.html" target="_blank"><div class="project">Arrows</div></a>
       </div>
 
       <div id="contactdiv" class="tab">
