Optimize tab container. Revise projects. Clean up files.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </script>
 </head>
 
-<body id="page-top" class="index">
+<body>
   <div class="onevh">
     <a href="index.html"><div class="title">Raymond Xu</div></a>
 
@@ -38,25 +38,20 @@
       <div class="cube3 behind"> </div>
 
       <div id="aboutdiv" class="tab">
-        Hi! My name is Raymond Xu, and I'm a sophomore studying Computer Science at <a href="http://www.columbia.edu" target="_blank">Columbia University</a>. I love building cool apps, learning new technologies, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" target="_blank">Medium</a>. The past summer I worked at <a href="https://www.paypal.com/home" target="_blank">PayPal</a> as a Software Engineer Intern. Feel free to reach out!
+        <p>Hi! My name is Raymond Xu, and I'm a sophomore studying Computer Science at <a href="http://www.columbia.edu" target="_blank">Columbia University</a>. I love building cool apps, learning new technologies, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" target="_blank">Medium</a>. The past summer I worked at <a href="https://www.paypal.com/home" target="_blank">PayPal</a> as a Software Engineer Intern. Feel free to reach out!</p>
       </div>
 
       <div id="projectsdiv" class="tab">
-        <a href="http://density.adicu.com" target="_blank"><div class="project">Density</div></a>
-        <a href="nytimes/index.html" target="_blank"><div class="project">NYTimes</div></a>
-        <a href="arrows/index.html" target="_blank"><div class="project">Arrows</div></a>
+        <div class="vertical-center">
+          <a href="https://www.github.com/raymondxu" target="_blank"><img id="github" class="mediabutton" src="images/githubdark.png"></a>
+        </div>
       </div>
 
       <div id="contactdiv" class="tab">
         <div class="contact">
-          <div class="github">
-            <a href="https://www.github.com/raymondxu" target="_blank"><img class="mediabutton" src="images/githubdark.png"></a>
-          </div>
-          <div>
           <a href="mailto:mail@raymondxu.io?Subject=Hello!" target="_top"><img class="mediabutton" src="images/mail.png"></a>
           <a href="https://www.facebook.com/RayXu" target="_blank"><img class="mediabutton" src="images/facebook.png"></a>
           <a href="https://www.linkedin.com/pub/raymond-xu/65/303/b58" target="_blank"><img class="mediabutton" src="images/linkedin.png"></a>
-          </div>
         </div>
       </div>
 
