Implement ring animation around github button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
       </div>
 
       <div id="projectsdiv" class="tab">
-        <div class="vertical-center">
+        <div id="r1" class="ring"></div>
+        <div id="r2" class="ring"></div>
+        <div id="r3" class="ring"></div>
+        <div id="r4" class="ring"></div>
+        <div id="github-container">
           <a href="https://www.github.com/raymondxu" target="_blank"><img id="github" class="mediabutton" src="images/githubdark.png"></a>
         </div>
       </div>
