Unify css selector naming

--- a/index.html
+++ b/index.html
@@ -23,42 +23,42 @@
 </head>
 
 <body>
-  <div class="onevh">
+  <div class="one-vh">
     <a href="index.html"><div class="title">Raymond Xu</div></a>
 
-    <div class="navcontainer">
+    <div class="nav-container">
       <span id="about" class="nav">ABOUT</span>
       <span id="projects" class="nav">PROJECTS</span>
       <span id="contact" class="nav">CONTACT</span>
     </div>
 
-    <div class="tabcontainer">
+    <div class="tab-container">
       <div class="cube1 behind"> </div>
       <div class="cube2 behind"> </div>
       <div class="cube3 behind"> </div>
 
-      <div id="aboutdiv" class="tab">
+      <div id="about-div" class="tab">
         <p>Hi! My name is Raymond Xu, and I'm a sophomore studying Computer Science at <a href="http://www.columbia.edu" target="_blank">Columbia University</a>. I love building cool apps, learning new technologies, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" target="_blank">Medium</a>. The past summer I worked at <a href="https://www.paypal.com/home" target="_blank">PayPal</a> as a Software Engineer Intern. Feel free to reach out!</p>
       </div>
 
-      <div id="projectsdiv" class="tab">
+      <div id="projects-div" class="tab">
         <div id="r1" class="ring"></div>
         <div id="r2" class="ring"></div>
         <div id="r3" class="ring"></div>
         <div id="r4" class="ring"></div>
         <div id="github-container">
-          <a href="https://www.github.com/raymondxu" target="_blank"><img id="github" class="mediabutton" src="images/githubdark.png"></a>
+          <a href="https://www.github.com/raymondxu" target="_blank"><img id="github" class="media-button" src="images/githubdark.png"></a>
         </div>
       </div>
 
-      <div id="contactdiv" class="tab">
+      <div id="contact-div" class="tab">
         <div class="contact">
-          <a href="mailto:mail@raymondxu.io?Subject=Hello!" target="_top"><img class="mediabutton" src="images/mail.png"></a>
-          <a href="https://www.facebook.com/RayXu" target="_blank"><img class="mediabutton" src="images/facebook.png"></a>
-          <a href="https://www.linkedin.com/pub/raymond-xu/65/303/b58" target="_blank"><img class="mediabutton" src="images/linkedin.png"></a>
+          <a href="mailto:mail@raymondxu.io?Subject=Hello!" target="_top"><img class="media-button" src="images/mail.png"></a>
+          <a href="https://www.facebook.com/RayXu" target="_blank"><img class="media-button" src="images/facebook.png"></a>
+          <a href="https://www.linkedin.com/pub/raymond-xu/65/303/b58" target="_blank"><img class="media-button" src="images/linkedin.png"></a>
         </div>
       </div>
-
+      
     </div> <!-- End of tab container -->
 
   </div>
