--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <div class="one-vh">
+  <div class="one-viewport">
     <a href="index.html"><div class="title">Raymond Xu</div></a>
 
     <div class="nav-container">
@@ -38,7 +38,7 @@
       <div class="cube3 behind"> </div>
 
       <div id="about-div" class="tab">
-        <p>Hi! My name is Raymond Xu, and I'm a sophomore studying Computer Science at <a href="http://www.columbia.edu" target="_blank">Columbia University</a>. I love building cool apps, learning new technologies, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" target="_blank">Medium</a>. The past summer I worked at <a href="https://www.paypal.com/home" target="_blank">PayPal</a> as a Software Engineer Intern. Feel free to reach out!</p>
+        <p>Hi! My name is Raymond Xu, and I'm a sophomore studying Computer Science at <a href="http://www.columbia.edu" target="_blank">Columbia University</a>. I love building cool apps, learning new technologies, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" target="_blank">Medium</a>. The past summer I worked at <a href="https://www.paypal.com/home" target="_blank">PayPal</a> as a Software Engineering Intern. Feel free to reach out!</p>
       </div>
 
       <div id="projects-div" class="tab">
