Write meta description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta name="author" content="Raymond Xu">
-  <meta name="description" content="My personal website">
+  <meta name="description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and application development.">
   <title>Raymond Xu</title>
   <link href="css/newstyle.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
