--- a/index.html
+++ b/index.html
@@ -2,45 +2,54 @@
 <html lang="en">
 
 <head>
+  <!-- Even this Acronym -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta name="author" content="Raymond Xu">
   <meta name="description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and application development.">
   <title>Raymond Xu</title>
+  <!-- Stylesheets -->
   <link href="css/newstyle.css" rel="stylesheet" type="text/css">
+  <!-- Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+  <!-- Analytics -->
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-52348587-1', 'auto');
   ga('send', 'pageview');
-
   </script>
 </head>
 
 <body>
+  <!-- Vertical Height Wrapper -->
   <div class="one-viewport">
-    <a href="index.html"><div class="title">Raymond Xu</div></a>
+    <!-- Title -->
+    <div class="title"><a href="index.html">Raymond Xu</a></div>
 
+    <!-- Navigation -->
     <div class="nav-container">
       <span id="about" class="nav">ABOUT</span>
       <span id="projects" class="nav">PROJECTS</span>
       <span id="contact" class="nav">CONTACT</span>
     </div>
 
+    <!-- Content Pane -->
     <div class="tab-container">
+      <!-- Cube^3 animation -->
       <div class="cube1 behind"> </div>
       <div class="cube2 behind"> </div>
       <div class="cube3 behind"> </div>
 
+      <!-- About -->
       <div id="about-div" class="tab">
-        <p>Hi! My name is Raymond Xu, and I'm a sophomore studying Computer Science at <a href="http://www.columbia.edu" target="_blank">Columbia University</a>. I love building cool apps, learning new technologies, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" target="_blank">Medium</a>. The past summer I worked at <a href="https://www.paypal.com/home" target="_blank">PayPal</a> as a Software Engineering Intern. Feel free to reach out!</p>
+        <p>Hi! My name is Raymond Xu, and I'm a sophomore studying Computer Science at <a href="http://www.columbia.edu" class="colored-link" target="_blank">Columbia University</a>. I love building cool apps, learning new technologies, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>. The past summer I worked at <a href="https://www.paypal.com/home" class="colored-link" target="_blank">PayPal</a> as a Software Engineering Intern. Feel free to reach out!</p>
       </div>
 
+      <!-- Projects -->
       <div id="projects-div" class="tab">
         <div id="r1" class="ring"></div>
         <div id="r2" class="ring"></div>
@@ -51,6 +60,7 @@
         </div>
       </div>
 
+      <!-- Contact -->
       <div id="contact-div" class="tab">
         <div class="contact">
           <a href="mailto:mail@raymondxu.io?Subject=Hello!" target="_top"><img class="media-button" src="images/mail.png"></a>
@@ -58,13 +68,13 @@
           <a href="https://www.linkedin.com/pub/raymond-xu/65/303/b58" target="_blank"><img class="media-button" src="images/linkedin.png"></a>
         </div>
       </div>
-      
-    </div> <!-- End of tab container -->
-
+    <!-- End of Content Pane -->
+    </div>
   </div>
 </body>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-    <script src="js/core.js"></script>
+  <!-- JavaScript -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+  <script src="js/core.js"></script>
 
 </html>
