Revamp about tab with timeline

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <meta name="description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and application development.">
   <title>Raymond Xu</title>
   <!-- Stylesheets -->
-  <link href="css/newstyle.css" rel="stylesheet" type="text/css">
+  <link href="css/base.css" rel="stylesheet" type="text/css">
+  <link href="css/timeline.css" rel="stylesheet" type="text/css">
   <!-- Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <!-- Analytics -->
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -34,6 +35,7 @@
     <div class="nav-container">
       <span id="about" class="nav">ABOUT</span>
       <span id="projects" class="nav">PROJECTS</span>
+      <!-- <span id="talks" class="nav">TALKS</span> -->
       <span id="contact" class="nav">CONTACT</span>
     </div>
 
@@ -46,7 +48,48 @@
 
       <!-- About -->
       <div id="about-div" class="tab">
-        <p>Hi! My name is Raymond Xu, and I'm a sophomore studying Computer Science at <a href="http://www.columbia.edu" class="colored-link" target="_blank">Columbia University</a>. I love building cool apps, learning new technologies, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>. The past summer I worked at <a href="https://www.paypal.com/home" class="colored-link" target="_blank">PayPal</a> as a Software Engineering Intern. Feel free to reach out!</p>
+        <div class="container">
+          <div class="event">
+            <div class="event-image-container">
+              <a href="http://www.cs.columbia.edu" target="_blank"><img class="event-image" src="images/columbia.jpg"></a>
+            </div>
+            <div class="event-description"><p>B.S. Computer Science</p><p>2014 - 2018</p>
+            </div>
+          </div>
+          <div class="event">
+            <div class="event-image-container">
+              <a href="http://www.google.com" target="_blank"><img class="event-image" src="images/google.jpg"></a>
+            </div>
+            <div class="event-description"><p>Software Engineer Intern</p><p>Summer 2016</p>
+            </div>
+          </div>
+          <div class="event">
+            <div class="event-image-container">
+              <a href="http://www.adicu.com" target="_blank"><img class="event-image" src="images/adi.jpg"></a>
+            </div>
+            <div class="event-description"><p>Head</p><p>2014 - Present</p>
+            </div>
+          </div>
+          <div class="event">
+            <div class="event-image-container">
+              <a href="http://www.devfe.st" target="_blank"><img class="event-image" src="images/devfest.jpg"></a>
+            </div>
+            <div class="event-description"><p>Lead</p><p>2015 - Present</p>
+            </div>
+          </div>
+          <div class="event">
+            <div class="event-image-container">
+              <a href="http://www.paypal.com" target="_blank"><img class="event-image" src="images/paypal.png"></a>
+            </div>
+            <div class="event-description"><p>Software Engineer Intern</p><p>Summer 2015</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--- Talks -->
+      <div id="talks-div" class="tab">
+        <!--  -->
       </div>
 
       <!-- Projects -->
