Add talks tab and adjusted styling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="nav-container">
       <span id="about" class="nav">ABOUT</span>
       <span id="projects" class="nav">PROJECTS</span>
-      <!-- <span id="talks" class="nav">TALKS</span> -->
+      <span id="talks" class="nav">TALKS</span>
       <span id="contact" class="nav">CONTACT</span>
     </div>
 
@@ -89,7 +89,8 @@
 
       <!--- Talks -->
       <div id="talks-div" class="tab">
-        <!--  -->
+        <div class="talk"><a href="http://www.raymondxu.io/datastructures.pdf" class="colored-link" target="_blank">Data Structures for Interviews</a></div>
+        <div class="talk"><a href="http://www.github.com/raymondxu/javaworkshop" class="colored-link" target="_blank">Intermediate Java</a></div>
       </div>
 
       <!-- Projects -->
