--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
       <!-- About -->
       <div id="about-div" class="tab">
+        <p>Hi! My name is Raymond Xu, and I'm a sophomore studying Computer Science at Columbia University. I love building apps, thinking about education, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p><br><br>
         <div class="container">
           <div class="event">
             <div class="event-image-container">
@@ -79,7 +80,7 @@
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="http://www.paypal.com" target="_blank"><img class="event-image" src="images/paypal.png"></a>
+              <a href="http://www.paypal.com" target="_blank"><img class="event-image" src="images/paypal.jpg"></a>
             </div>
             <div class="event-description"><p>Software Engineer Intern</p><p>Summer 2015</p>
             </div>
@@ -89,6 +90,7 @@
 
       <!--- Talks -->
       <div id="talks-div" class="tab">
+        <p>Teaching and pedagogy are very important to me because they enable effective education. Here are some technical talks that I wrote for <a href="http://www.adicu.com" class="colored-link" target="_blank">ADI</a>:<br><br>
         <div class="talk"><a href="http://www.raymondxu.io/datastructures.pdf" class="colored-link" target="_blank">Data Structures for Interviews</a></div>
         <div class="talk"><a href="http://www.github.com/raymondxu/javaworkshop" class="colored-link" target="_blank">Intermediate Java</a></div>
       </div>
