Improve README.md and talks div

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <!-- Vertical Height Wrapper -->
+  <!-- Viewport Wrapper -->
   <div class="one-viewport">
     <!-- Title -->
     <div class="title"><a href="index.html">Raymond Xu</a></div>
@@ -48,7 +48,7 @@
 
       <!-- About -->
       <div id="about-div" class="tab">
-        <p>Hi! My name is Raymond Xu, and I'm a sophomore studying Computer Science at Columbia University. I love building apps, thinking about education, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p><br><br>
+        <p>Hi! My name is Raymond Xu, and I'm a sophomore studying Computer Science at Columbia University. I love building apps, thinking about pedagogy, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p><br><br>
         <div class="container">
           <div class="event">
             <div class="event-image-container">
@@ -90,7 +90,7 @@
 
       <!--- Talks -->
       <div id="talks-div" class="tab">
-        <p>Teaching and pedagogy are very important to me because they enable effective education. Here are some technical talks that I wrote for <a href="http://www.adicu.com" class="colored-link" target="_blank">ADI</a>:<br><br>
+        <p>Education and pedagogy are very important to me, so I enjoy teaching. Here are some technical talks that I developed for <a href="http://www.adicu.com" class="colored-link" target="_blank">ADI</a>:<br><br>
         <div class="talk"><a href="http://www.raymondxu.io/datastructures.pdf" class="colored-link" target="_blank">Data Structures for Interviews</a></div>
         <div class="talk"><a href="http://www.github.com/raymondxu/javaworkshop" class="colored-link" target="_blank">Intermediate Java</a></div>
       </div>
