--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
             <div class="event-image-container">
               <a href="http://www.google.com" target="_blank"><img class="event-image" src="images/google.jpg"></a>
             </div>
-            <div class="event-description"><p>Software Engineer Intern</p><p>Summer 2016</p>
+            <div class="event-description"><p>Software Engineering Intern</p><p>Summer 2016</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="http://www.adicu.com" target="_blank"><img class="event-image" src="images/adi.jpg"></a>
+              <a href="http://www.adicu.com" target="_blank"><img class="event-image" src="images/adi.png"></a>
             </div>
             <div class="event-description"><p>Head</p><p>2014 - Present</p>
             </div>
@@ -75,14 +75,14 @@
             <div class="event-image-container">
               <a href="http://www.devfe.st" target="_blank"><img class="event-image" src="images/devfest.jpg"></a>
             </div>
-            <div class="event-description"><p>Lead</p><p>2015 - Present</p>
+            <div class="event-description"><p>Co-director</p><p>2015 - Present</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
               <a href="http://www.paypal.com" target="_blank"><img class="event-image" src="images/paypal.jpg"></a>
             </div>
-            <div class="event-description"><p>Software Engineer Intern</p><p>Summer 2015</p>
+            <div class="event-description"><p>Software Engineering Intern</p><p>Summer 2015</p>
             </div>
           </div>
         </div>
