--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
       <div id="talks-div" class="tab">
         <p>I enjoy teaching. Here are some technical talks that I developed for <a href="http://www.adicu.com" class="colored-link" target="_blank">ADI</a>:<br><br>
         <div class="talk"><a href="http://www.raymondxu.io/datastructures.pdf" class="colored-link" target="_blank">Data Structures for Interviews</a></div>
+        <div class="talk"><a href="http://learn.devfe.st/webdev" class="colored-link" target="_blank">Web Development with Flask</a></div>
         <div class="talk"><a href="http://www.github.com/raymondxu/javaworkshop" class="colored-link" target="_blank">Intermediate Java</a></div>
       </div>
 
