--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Viewport Wrapper -->
   <div class="one-viewport">
     <!-- Title -->
-    <div class="title"><a href="index.html">Raymond Xu</a></div>
+    <h1><a href="index.html">Raymond Xu</a></h1>
 
     <!-- Navigation -->
     <div class="nav-container">
@@ -52,35 +52,35 @@
         <div class="container">
           <div class="event">
             <div class="event-image-container">
-              <a href="http://www.cs.columbia.edu" target="_blank"><img class="event-image" src="images/columbia.jpg"></a>
+              <a href="http://www.cs.columbia.edu" target="_blank"><img class="event-image" alt="columbia" src="images/columbia.jpg"></a>
             </div>
             <div class="event-description"><p>B.S. Computer Science</p><p>2014 - 2018</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="http://www.google.com" target="_blank"><img class="event-image" src="images/google.jpg"></a>
+              <a href="http://www.google.com" target="_blank"><img class="event-image" alt="google" src="images/google.jpg"></a>
             </div>
             <div class="event-description"><p>Software Engineering Intern</p><p>Summer 2016</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="http://www.adicu.com" target="_blank"><img class="event-image" src="images/adi.png"></a>
+              <a href="http://www.adicu.com" target="_blank"><img class="event-image" alt="adi" src="images/adi.png"></a>
             </div>
             <div class="event-description"><p>Head</p><p>2014 - Present</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="http://www.devfe.st" target="_blank"><img class="event-image" src="images/devfest.jpg"></a>
+              <a href="http://www.devfe.st" target="_blank"><img class="event-image" alt="devfest" src="images/devfest.jpg"></a>
             </div>
             <div class="event-description"><p>Co-director</p><p>2015 - Present</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="http://www.paypal.com" target="_blank"><img class="event-image" src="images/paypal.jpg"></a>
+              <a href="http://www.paypal.com" target="_blank"><img class="event-image" alt="paypal" src="images/paypal.jpg"></a>
             </div>
             <div class="event-description"><p>Software Engineering Intern</p><p>Summer 2015</p>
             </div>
@@ -95,13 +95,13 @@
         <div id="r3" class="ring"></div>
         <div id="r4" class="ring"></div>
         <div id="github-container">
-          <a href="https://www.github.com/raymondxu" target="_blank"><img id="github" class="media-button" src="images/githubdark.png"></a>
+          <a href="https://www.github.com/raymondxu" target="_blank"><img id="github" alt="github" class="media-button" src="images/githubdark.png"></a>
         </div>
       </div>
 
       <!--- Talks -->
       <div id="talks-div" class="tab">
-        <p>I enjoy teaching. Here are some technical talks that I developed for <a href="http://www.adicu.com" class="colored-link" target="_blank">ADI</a>:<br><br>
+        <p>I enjoy teaching. Here are some technical talks and workshops that I developed for <a href="http://www.adicu.com" class="colored-link" target="_blank">ADI</a>:<br><br>
         <div class="talk"><a href="http://www.raymondxu.io/datastructures.pdf" class="colored-link" target="_blank">Data Structures for Interviews</a></div>
         <div class="talk"><a href="http://learn.devfe.st/webdev" class="colored-link" target="_blank">Web Development with Flask</a></div>
         <div class="talk"><a href="http://www.github.com/raymondxu/javaworkshop" class="colored-link" target="_blank">Intermediate Java</a></div>
@@ -110,8 +110,8 @@
       <!-- Contact -->
       <div id="contact-div" class="tab">
         <div class="contact">
-          <a href="mailto:mail@raymondxu.io?Subject=Hello!" target="_top"><img class="media-button" src="images/mail.png"></a>
-          <a href="https://www.facebook.com/RayXu" target="_blank"><img class="media-button" src="images/facebook.png"></a>
+          <a href="mailto:mail@raymondxu.io?Subject=Hello!" target="_top"><img class="media-button" alt="email" src="images/mail.png"></a>
+          <a href="https://www.facebook.com/RayXu" target="_blank"><img class="media-button" alt="facebook" src="images/facebook.png"></a>
           <a href="https://www.linkedin.com/pub/raymond-xu/65/303/b58" target="_blank"><img class="media-button" src="images/linkedin.png"></a>
         </div>
       </div>
