More SEO improvements

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
     <!-- Navigation -->
     <div class="nav-container">
-      <span id="about" class="nav">ABOUT</span>
-      <span id="projects" class="nav">PROJECTS</span>
-      <span id="talks" class="nav">TALKS</span>
-      <span id="contact" class="nav">CONTACT</span>
+      <span id="about" class="nav"><h2>ABOUT</h2></span>
+      <span id="projects" class="nav"><h2>PROJECTS</h2></span>
+      <span id="talks" class="nav"><h2>TALKS</h2></span>
+      <span id="contact" class="nav"><h2>CONTACT</h2></span>
     </div>
 
     <!-- Content Pane -->
@@ -48,7 +48,7 @@
 
       <!-- About -->
       <div id="about-div" class="tab">
-        <p>Hi! My name is Raymond Xu, and I'm a sophomore studying Computer Science at Columbia University. I love building apps, thinking about pedagogy, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p><br><br>
+        <p>Hey! I'm Raymond Xu, a sophomore studying Computer Science at Columbia University. I love building apps, thinking about pedagogy, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p><br><br>
         <div class="container">
           <div class="event">
             <div class="event-image-container">
@@ -112,7 +112,7 @@
         <div class="contact">
           <a href="mailto:mail@raymondxu.io?Subject=Hello!" target="_top"><img class="media-button" alt="email" src="images/mail.png"></a>
           <a href="https://www.facebook.com/RayXu" target="_blank"><img class="media-button" alt="facebook" src="images/facebook.png"></a>
-          <a href="https://www.linkedin.com/pub/raymond-xu/65/303/b58" target="_blank"><img class="media-button" src="images/linkedin.png"></a>
+          <a href="https://www.linkedin.com/pub/raymond-xu/65/303/b58" target="_blank"><img class="media-button" alt="linkedin" src="images/linkedin.png"></a>
         </div>
       </div>
     <!-- End of Content Pane -->
