Improve mobile experience

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 
       <!-- About -->
       <div id="about-div" class="tab">
-        <p>Hey! I'm Raymond Xu, a sophomore studying Computer Science at Columbia University. I love building apps, thinking about pedagogy, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p><br><br>
+        <p>Hey! I'm Raymond Xu, a sophomore studying Computer Science at Columbia University. I love building apps, thinking about pedagogy, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p>
+        <div class="divide"><hr></div>
         <div class="container">
           <div class="event">
             <div class="event-image-container">
