--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <!-- About -->
       <div id="about-div" class="tab">
-        <p>Hey! I'm Raymond Xu, a sophomore studying Computer Science at Columbia University. I love building apps, thinking about pedagogy, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p>
+        <p>Hey! I'm Raymond Xu, a junior studying Computer Science at Columbia University. I love building apps, thinking about pedagogy, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p>
         <div class="divide"><hr></div>
         <div class="container">
           <div class="event">
@@ -69,14 +69,14 @@
             <div class="event-image-container">
               <a href="http://www.adicu.com" target="_blank"><img class="event-image" alt="adi" src="images/adi.png"></a>
             </div>
-            <div class="event-description"><p>Head</p><p>2014 - Present</p>
+            <div class="event-description"><p>Education Head</p><p>2014 - Present</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
               <a href="http://www.devfe.st" target="_blank"><img class="event-image" alt="devfest" src="images/devfest.jpg"></a>
             </div>
-            <div class="event-description"><p>Co-director</p><p>2015 - Present</p>
+            <div class="event-description"><p>Director</p><p>2015 - Present</p>
             </div>
           </div>
           <div class="event">
