--- a/snake/index.html
+++ b/snake/index.html
@@ -24,7 +24,7 @@
 
 </body>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+    <script src="jquery.min.js"></script>
     <script src="core.js"></script>
 
 </html>
