--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 
       <!--- Talks -->
       <div id="talks-div" class="tab">
-        <p>I enjoy teaching. Here are some technical talks and workshops that I developed for <a href="http://www.adicu.com" class="colored-link" target="_blank">ADI</a>:<br><br>
+        <p>I enjoy teaching. Here are some technical talks and workshops that I've developed:<br><br>
+        <div class="talk"><a href="http://www.raymondxu.io/hackcon16.pdf" class="colored-link" target="_blank">5 Steps for Effective Education at Hackathons</a></div>
         <div class="talk"><a href="http://www.raymondxu.io/datastructures.pdf" class="colored-link" target="_blank">Data Structures for Interviews</a></div>
         <div class="talk"><a href="http://learn.devfe.st/webdev" class="colored-link" target="_blank">Web Development with Flask</a></div>
         <div class="talk"><a href="http://www.github.com/raymondxu/javaworkshop" class="colored-link" target="_blank">Intermediate Java</a></div>
