--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <!-- About -->
       <div id="about-div" class="tab">
-        <p>Hey! I'm Raymond Xu, a junior studying Computer Science at Columbia University. I love building apps, thinking about pedagogy, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p>
+        <p>Hey! I'm Raymond Xu, a rising junior studying Computer Science at Columbia University. I love building apps, thinking about pedagogy, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p>
         <div class="divide"><hr></div>
         <div class="container">
           <div class="event">
@@ -102,11 +102,23 @@
 
       <!--- Talks -->
       <div id="talks-div" class="tab">
-        <p>I enjoy teaching. Here are some technical talks and workshops that I've developed:<br><br>
-        <div class="talk"><a href="http://www.raymondxu.io/hackcon16.pdf" class="colored-link" target="_blank">5 Steps for Effective Education at Hackathons</a></div>
-        <div class="talk"><a href="http://www.raymondxu.io/datastructures.pdf" class="colored-link" target="_blank">Data Structures for Interviews</a></div>
-        <div class="talk"><a href="http://learn.devfe.st/webdev" class="colored-link" target="_blank">Web Development with Flask</a></div>
-        <div class="talk"><a href="http://www.github.com/raymondxu/javaworkshop" class="colored-link" target="_blank">Intermediate Java</a></div>
+        <p>I enjoy teaching. Here are some technical talks and workshops that I've developed:<br><br><br>
+        <div class="talk-container">
+          <a href="http://www.raymondxu.io/hackcon16.pdf" class="colored-link" target="_blank">5 Steps for Effective Education at Hackathons</a>
+          <div class="talk-description">Coming soon to HackCon 2016!</div>
+        </div>
+        <div class="talk-container">
+          <a href="http://www.raymondxu.io/datastructures.pdf" class="colored-link" target="_blank">Data Structures for Interviews</a>
+          <div class="talk-description">I give this talk at Columbia every fall during interview season. It miraculously packs a semester's worth of content from a data structures class into one hour.</div>
+        </div>
+        <div class="talk-container">
+          <a href="http://learn.devfe.st/webdev" class="colored-link" target="_blank">Web Development with Flask</a>
+          <div class="talk-description">I co-authored this original curriculum track for DevFest 2016, a week-long workshop series followed by a hackathon. It teaches web development by guiding readers through building a reading list app using Flask and Mongo.</div>
+        </div>
+        <div class="talk-container">
+          <a href="http://www.github.com/raymondxu/javaworkshop" class="colored-link" target="_blank">Intermediate Java</a>
+          <div class="talk-description">I wrote this workshop to function as a supplement to introductory computer science courses. It covers Java variable concepts, abstraction, and ends with a taste of design patterns.</div>
+        </div>
       </div>
 
       <!-- Contact -->
