Updated hackcon slides

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
         <div class="talk-container">
           <a href="http://www.github.com/raymondxu/javaworkshop" class="colored-link" target="_blank">Intermediate Java</a>
-          <div class="talk-description">I wrote this workshop to function as a supplement to introductory computer science courses. It covers Java variable concepts, abstraction, and ends with a taste of design patterns.</div>
+          <div class="talk-description">This workshop functions as a supplement to introductory computer science courses. It covers Java variable concepts, abstraction, and ends with a taste of design patterns.</div>
         </div>
       </div>
 
