Update hackcon talk desc

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <p>I enjoy teaching. Here are some technical talks and workshops that I've developed:<br><br><br>
         <div class="talk-container">
           <a href="http://www.raymondxu.io/hackcon16.pdf" class="colored-link" target="_blank">5 Steps for Effective Education at Hackathons</a>
-          <div class="talk-description">Coming soon to HackCon 2016!</div>
+          <div class="talk-description">I gave this workshop at HackConIV to an audience of ~70 hackathon organizers. It details a concise methodology for constructing effective educational models for hackathons and the importance of thoughtfully iterating on them.</div>
         </div>
         <div class="talk-container">
           <a href="http://www.raymondxu.io/datastructures.pdf" class="colored-link" target="_blank">Data Structures for Interviews</a>
