--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
         <p>I enjoy teaching. Here are some technical talks and workshops that I've developed:<br><br><br>
         <div class="talk-container">
           <a href="http://www.raymondxu.io/hackcon16.pdf" class="colored-link" target="_blank">5 Steps for Effective Education at Hackathons</a>
-          <div class="talk-description">I gave this workshop at HackConIV to an audience of ~70 hackathon organizers. It details a concise methodology for constructing effective educational models for hackathons and the importance of thoughtfully iterating on them.</div>
+          <div class="talk-description">I gave this workshop at <a href="http://www.hackcon.io/na" class="underlined-link" target="_blank">HackConIV</a> to an audience of 70 hackathon organizers. It details a methodology for constructing effective educational models for hackathons and explains the importance of thoughtful iteration.</div>
         </div>
         <div class="talk-container">
           <a href="http://www.raymondxu.io/datastructures.pdf" class="colored-link" target="_blank">Data Structures for Interviews</a>
-          <div class="talk-description">I give this talk at Columbia every fall during interview season. It miraculously packs a semester's worth of content from a data structures class into one hour.</div>
+          <div class="talk-description">I give this lightning talk at Columbia every fall during technical interview season. It miraculously packs a semester's worth of content from a data structures class into one hour.</div>
         </div>
         <div class="talk-container">
           <a href="http://learn.devfe.st/webdev" class="colored-link" target="_blank">Web Development with Flask</a>
-          <div class="talk-description">I co-authored this original curriculum track for DevFest 2016, a week-long workshop series followed by a hackathon. It teaches web development by guiding readers through building a reading list app using Flask and Mongo.</div>
+          <div class="talk-description">I co-authored this original curriculum track for <a href="http://devfe.st" class="underlined-link" target="_blank">DevFest 2016</a>, <a href="http://adicu.com" class="underlined-link" target="_blank">ADI's</a> week-long workshop series followed by a hackathon. This comprehensive curriculum teaches web development by guiding students through building a reading list app using Flask and Mongo. Read more about the DevFest Track System <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here.</a></div>
         </div>
         <div class="talk-container">
           <a href="http://www.github.com/raymondxu/javaworkshop" class="colored-link" target="_blank">Intermediate Java</a>
-          <div class="talk-description">This workshop functions as a supplement to introductory computer science courses. It covers Java variable concepts, abstraction, and ends with a taste of design patterns.</div>
+          <div class="talk-description">This workshop functions as a supplement to your typical introductory computer science course. It covers Java variable concepts, abstraction, and ends with a splash of design patterns.</div>
         </div>
       </div>
 
