Improve desc and minor style

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <!-- About -->
       <div id="about-div" class="tab">
-        <p>Hey! I'm Raymond Xu, a rising junior studying Computer Science at Columbia University. I love building apps, thinking about pedagogy, and practicing sleight of hand. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p>
+        <p>Hey! I'm Raymond Xu, a rising junior studying Computer Science at Columbia University. I love building apps, thinking about pedagogy, and practicing sleight of hand. At school, I help run <a href="http://www.adicu.com" class="colored-link" target="_blank">ADI</a> and <a href="http://www.devfe.st" class="colored-link" target="_blank">DevFest</a>. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p>
         <div class="divide"><hr></div>
         <div class="container">
           <div class="event">
@@ -109,15 +109,15 @@
         </div>
         <div class="talk-container">
           <a href="http://www.raymondxu.io/datastructures.pdf" class="colored-link" target="_blank">Data Structures for Interviews</a>
-          <div class="talk-description">I give this lightning talk at Columbia every fall during technical interview season. It miraculously packs a semester's worth of content from a data structures class into one hour.</div>
+          <div class="talk-description">I give this lightning talk at Columbia every fall during interview season. It miraculously packs a semester's worth of content from a data structures class into one hour.</div>
         </div>
         <div class="talk-container">
           <a href="http://learn.devfe.st/webdev" class="colored-link" target="_blank">Web Development with Flask</a>
-          <div class="talk-description">I co-authored this original curriculum track for <a href="http://devfe.st" class="underlined-link" target="_blank">DevFest 2016</a>, <a href="http://adicu.com" class="underlined-link" target="_blank">ADI's</a> week-long workshop series followed by a hackathon. This comprehensive curriculum teaches web development by guiding students through building a reading list app using Flask and Mongo. Read more about the DevFest Track System <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here.</a></div>
+          <div class="talk-description">I co-authored this original curriculum for <a href="http://devfe.st" class="underlined-link" target="_blank">DevFest 2016</a>, <a href="http://adicu.com" class="underlined-link" target="_blank">ADI's</a> week-long workshop series and hackathon. This comprehensive tutorial teaches web development by guiding students through the process of building a reading list app using Flask and Mongo. Read more about the DevFest Track System <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here</a>.</div>
         </div>
         <div class="talk-container">
           <a href="http://www.github.com/raymondxu/javaworkshop" class="colored-link" target="_blank">Intermediate Java</a>
-          <div class="talk-description">This workshop functions as a supplement to your typical introductory computer science course. It covers Java variable concepts, abstraction, and ends with a splash of design patterns.</div>
+          <div class="talk-description">This workshop functions as a supplement to your typical introductory computer science course. It covers Java variable concepts, abstraction, and concludes with a splash of design patterns.</div>
         </div>
       </div>
 
