--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <script src="https://use.fontawesome.com/c91c862a08.js"></script>
   <!-- Analytics -->
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -124,9 +125,10 @@
       <!-- Contact -->
       <div id="contact-div" class="tab">
         <div class="contact">
-          <a href="mailto:mail@raymondxu.io?Subject=Hello!" target="_top"><img class="media-button" alt="email" src="images/mail.png"></a>
-          <a href="https://www.facebook.com/RayXu" target="_blank"><img class="media-button" alt="facebook" src="images/facebook.png"></a>
-          <a href="https://www.linkedin.com/pub/raymond-xu/65/303/b58" target="_blank"><img class="media-button" alt="linkedin" src="images/linkedin.png"></a>
+          <a href="mailto:mail@raymondxu.io?Subject=Hello!" target="_top"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.medium.com/@raymondxu" target="_blank"><i class="fa fa-medium fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/RayXu" target="_blank"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.linkedin.com/pub/raymond-xu/65/303/b58" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
         </div>
       </div>
     <!-- End of Content Pane -->
