--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta name="author" content="Raymond Xu">
   <meta name="description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and application development.">
-  <link rel="shortcut icon" href="/favicon.ico" />
-  <link rel="icon" sizes="16x16 32x32" href="/favicon.ico">
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
   <title>Raymond Xu</title>
   <!-- Stylesheets -->
   <link href="css/base.css" rel="stylesheet" type="text/css">
