--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
       <div id="talks-div" class="tab">
         <p>I enjoy teaching. Here are some technical talks and workshops that I've developed:<br><br><br>
         <div class="talk-container">
+          <a href="http://www.raymondxu.io/algorithms.pdf" class="colored-link" target="_blank">Algorithms for Interviews</a>
+          <div class="talk-description">The sequel to Data Structures for Interviews, this talk explores sorting, recursion, greedy algorithms, and dynamic programming.</div>
+        </div>
+        <div class="talk-container">
           <a href="http://www.raymondxu.io/hackcon16.pdf" class="colored-link" target="_blank">5 Steps for Effective Education at Hackathons</a>
           <div class="talk-description">I gave this workshop at <a href="http://www.hackcon.io/na" class="underlined-link" target="_blank">HackCon IV</a> to an audience of 70 hackathon organizers. It details a methodology for constructing effective educational models for hackathons and explains the importance of thoughtful iteration.</div>
         </div>
