--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <p>I enjoy teaching. Here are some technical talks and workshops that I've developed:<br><br><br>
         <div class="talk-container">
           <a href="http://www.raymondxu.io/algorithms.pdf" class="colored-link" target="_blank">Algorithms for Interviews</a>
-          <div class="talk-description">The sequel to Data Structures for Interviews, this talk explores sorting, recursion, greedy algorithms, and dynamic programming.</div>
+          <div class="talk-description">The sequel to Data Structures for Interviews, this lightning talk explores sorting, recursion, greedy algorithms, and dynamic programming.</div>
         </div>
         <div class="talk-container">
           <a href="http://www.raymondxu.io/hackcon16.pdf" class="colored-link" target="_blank">5 Steps for Effective Education at Hackathons</a>
