Add Writing Good Code talk

--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
       <div id="talks-div" class="tab">
         <p>I enjoy teaching. Here are some technical talks and workshops that I've developed:<br><br><br>
         <div class="talk-container">
+          <a href="http://www.raymondxu.io/wgc.pdf" class="colored-link" target="_blank">Writing Good Code</a>
+          <div class="talk-description">This talk discusses how to utilize code style, software design patterns, and testing to write maintainable and robust code.</div>
+        </div>
+        <div class="talk-container">
           <a href="http://www.raymondxu.io/algorithms.pdf" class="colored-link" target="_blank">Algorithms for Interviews</a>
           <div class="talk-description">The sequel to Data Structures for Interviews, this lightning talk explores sorting, recursion, greedy algorithms, and dynamic programming.</div>
         </div>
@@ -120,7 +124,7 @@
         </div>
         <div class="talk-container">
           <a href="http://learn.devfe.st/webdev" class="colored-link" target="_blank">Web Development with Flask</a>
-          <div class="talk-description">I co-authored this original curriculum for <a href="http://devfe.st" class="underlined-link" target="_blank">DevFest 2016</a>, <a href="http://adicu.com" class="underlined-link" target="_blank">ADI's</a> week-long workshop series and hackathon. This comprehensive tutorial teaches web development by guiding students through the process of building a reading list app using Flask and Mongo. Read more about the DevFest Track System <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here</a>.</div>
+          <div class="talk-description">I co-authored this original curriculum for <a href="http://devfe.st" class="underlined-link" target="_blank">DevFest 2016</a>, <a href="http://adicu.com" class="underlined-link" target="_blank">ADI</a>'s week-long workshop series and hackathon. This comprehensive tutorial teaches web development by guiding students through the process of building a reading list app using Flask and Mongo. Read more about the DevFest Track System <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here</a>.</div>
         </div>
         <div class="talk-container">
           <a href="http://www.github.com/raymondxu/javaworkshop" class="colored-link" target="_blank">Intermediate Java</a>
