--- a/index.html
+++ b/index.html
@@ -56,35 +56,42 @@
         <div class="container">
           <div class="event">
             <div class="event-image-container">
-              <a href="http://www.cs.columbia.edu" target="_blank"><img class="event-image" alt="columbia" src="images/columbia.jpg"></a>
+              <a href="http://www.cs.columbia.edu" target="_blank"><img class="event-image" alt="columbia" src="img/columbia.jpg"></a>
             </div>
             <div class="event-description"><p>B.S. Computer Science</p><p>2014 - 2018</p>
             </div>
           </div>
           <div class="event">
+              <div class="event-image-container">
+                <a href="https://www.lyft.com" target="_blank"><img class="event-image" alt="lyft" src="img/lyft.jpg"></a>
+              </div>
+              <div class="event-description"><p>Software Engineering Intern</p><p>Summer 2017</p>
+              </div>
+          </div>
+          <div class="event">
             <div class="event-image-container">
-              <a href="http://www.google.com" target="_blank"><img class="event-image" alt="google" src="images/google.jpg"></a>
+              <a href="http://www.google.com" target="_blank"><img class="event-image" alt="google" src="img/google.jpg"></a>
             </div>
             <div class="event-description"><p>Software Engineering Intern</p><p>Summer 2016</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="http://www.adicu.com" target="_blank"><img class="event-image" alt="adi" src="images/adi.png"></a>
+              <a href="http://www.adicu.com" target="_blank"><img class="event-image" alt="adi" src="img/adi.png"></a>
             </div>
             <div class="event-description"><p>Education Head</p><p>2014 - Present</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="http://www.devfe.st" target="_blank"><img class="event-image" alt="devfest" src="images/devfest.jpg"></a>
+              <a href="http://devfe.st" target="_blank"><img class="event-image" alt="devfest" src="img/devfest.jpg"></a>
             </div>
-            <div class="event-description"><p>Director</p><p>2015 - Present</p>
+            <div class="event-description"><p>Lead Director</p><p>2015 - Present</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="http://www.paypal.com" target="_blank"><img class="event-image" alt="paypal" src="images/paypal.jpg"></a>
+              <a href="http://www.paypal.com" target="_blank"><img class="event-image" alt="paypal" src="img/paypal.jpg"></a>
             </div>
             <div class="event-description"><p>Software Engineering Intern</p><p>Summer 2015</p>
             </div>
@@ -99,7 +106,7 @@
         <div id="r3" class="ring"></div>
         <div id="r4" class="ring"></div>
         <div id="github-container">
-          <a href="https://www.github.com/raymondxu" target="_blank"><img id="github" alt="github" class="media-button" src="images/githubdark.png"></a>
+          <a href="https://www.github.com/raymondxu" target="_blank"><img id="github" alt="github" class="media-button" src="img/githubdark.png"></a>
         </div>
       </div>
 
@@ -108,7 +115,7 @@
         <p>I enjoy teaching. Here are some technical talks and workshops that I've developed.<br><br><br>
         <div class="talk-container">
           <a href="http://www.raymondxu.io/wgc.pdf" class="colored-link" target="_blank">Writing Good Code</a>
-          <div class="talk-description">This talk discusses principles of effective software development and introduces linters and testing frameworks as important tools for writing maintainable software.</div>
+          <div class="talk-description">This talk teaches principles of effective software development that aren't emphasized in college coursework. In it, I explain why code style, design patterns, and testing are important for writing maintainable code, and introduce relevant tools such as linters and testing frameworks.</div>
         </div>
         <div class="talk-container">
           <a href="http://www.raymondxu.io/algorithms.pdf" class="colored-link" target="_blank">Algorithms for Interviews</a>
@@ -124,11 +131,11 @@
         </div>
         <div class="talk-container">
           <a href="http://learn.devfe.st/webdev" class="colored-link" target="_blank">Web Development with Flask</a>
-          <div class="talk-description">I co-authored this original curriculum for <a href="http://devfe.st" class="underlined-link" target="_blank">DevFest 2016</a>, <a href="http://adicu.com" class="underlined-link" target="_blank">ADI</a>'s week-long workshop series and hackathon. This comprehensive tutorial teaches web development by guiding students through the process of building a reading list app using Flask and Mongo. Read more about the DevFest Track System and the educational methodology <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here</a>.</div>
+          <div class="talk-description">I co-authored this original curriculum for <a href="http://devfe.st" class="underlined-link" target="_blank">DevFest 2016</a>, <a href="http://adicu.com" class="underlined-link" target="_blank">ADI</a>'s week-long workshop series and hackathon. This comprehensive tutorial teaches web development by guiding students through the process of building a reading list app using Flask and Mongo. Read more about the DevFest Track System and its educational methodology <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here</a>.</div>
         </div>
         <div class="talk-container">
           <a href="http://www.github.com/raymondxu/javaworkshop" class="colored-link" target="_blank">Intermediate Java</a>
-          <div class="talk-description">This workshop functions as a supplement to your typical introductory computer science course. It covers Java variable concepts, abstraction, and concludes with a splash of design patterns.</div>
+          <div class="talk-description">This workshop functions as a supplement to a typical introductory computer science course. It covers Java variable concepts, abstraction, and concludes with a splash of design patterns.</div>
         </div>
       </div>
 
