--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta name="author" content="Raymond Xu">
   <meta name="description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and product development.">
+  <meta name="robots" content="NOODP, index, follow" />
   <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
   <title>Raymond Xu</title>
@@ -156,5 +157,4 @@
   <!-- JavaScript -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
   <script src="js/core.js"></script>
-
 </html>
